nuevo metodo en el API de salas add_incidencia_id_puestos_pendientes
